--- a/unit1.lfm
+++ b/unit1.lfm
@@ -1,19 +1,38 @@
 object Form1: TForm1
-  Left = 457
+  Left = 817
   Height = 217
-  Top = 301
+  Top = 578
   Width = 320
-  Caption = 'Form1'
+  Caption = 'Helo'
   ClientHeight = 217
   ClientWidth = 320
+  Color = clInactiveCaption
   LCLVersion = '2.0.8.0'
   object Button1: TButton
-    Left = 16
+    Left = 112
     Height = 25
-    Top = 24
+    Top = 46
     Width = 75
-    Caption = 'Button1'
+    Caption = 'Halo'
+    Color = clNone
     OnClick = Button1Click
     TabOrder = 0
+  end
+  object eNama: TEdit
+    Left = 24
+    Height = 23
+    Top = 48
+    Width = 80
+    TabOrder = 1
+    Text = 'eNama'
+  end
+  object Label1: TLabel
+    Left = 24
+    Height = 15
+    Top = 26
+    Width = 32
+    Caption = 'Nama'
+    ParentColor = False
+    OnClick = Label1Click
   end
 end
